<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name">Kryptan</string>
    <string name="save">OK</string>
    <string name="show">Show</string>
    <string name="cancel">Close</string>
    <string name="clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_sync">Syncronize with desktop</string>
    <string name="action_change_master">New Masterkey</string>
    <string name="action_new_password">Add new password</string>
    <string name="action_edit_labels">Edit labels</string>
    <string name="new_masterkey_hint">New masterkey&#8230;</string>
    <string name="confirm_masterkey_hint">Confirm&#8230;</string>
    <string name="confirm_old_masterkey_hint">Old masterkey&#8230;</string>
    <string name="masterkey_change_toast">Masterkey successfully changed!</string>
    <string name="new_password_file_created">Successfully created a new password file!</string>
    <string name="create_new_label">&#8230;or create a new one!</string>
    <string name="create_new_label_help">Enter a label name:</string>
    <string name="select_label_text">&#8230;selecting an existing label&#8230;</string>
    <string name="select_label_title">Select an existing label!</string>
    <string name="button_browse_all_passwords">Browse all %d passwords</string>
    <string name="button_browse_filtered_passwords_format">Browse %d matching passwords</string>
    <string name="text_filter_format">Filtering based on %d label(s)</string>
    <string name="text_filter_none">No filter selected</string>
    <string name="title_secret_list">Passwords</string>
    <string name="title_secret_detail">Details</string>
    <string name="label_nr_of_passwords_format">%d password(s)</string>
    <string name="details_copy_to_clipboard_button">Copy to clipboard</string>
    <string name="details_edit_password_button">Edit password</string>
    <string name="details_edit_username_button">Edit username</string>
    <string name="details_edit_description_button">Edit description</string>
    <string name="details_edit_labels_button">Edit labels</string>
    <string name="details_description_text">Description:</string>
    <string name="details_username_text">Username:</string>
    <string name="details_password_text">Password:</string>
    <string name="details_toast_description_copied">Description copied!</string>
    <string name="details_toast_username_copied">Username copied!</string>
    <string name="details_toast_password_copied">Password copied!</string>
    <string name="details_toast_description_edited">New description saved!</string>
    <string name="details_toast_username_edited">New username saved!</string>
    <string name="details_toast_password_edited">New password saved!</string>
    <string name="details_description_edit_message">Please input a new description!</string>
    <string name="details_username_edit_message">Please input a new username!</string>
    <string name="details_description_edit_title">New description!</string>
    <string name="details_username_edit_title">New username!</string>
    <string name="details_delete_password_button">Delete this password!</string>
    <string name="details_delete_password_confirm">Are you sure you want to completely delete this password and all its associated data?</string>
    <string name="details_misc_text">Other actions:</string>
    <string name="search_filter_title">Search</string>
    <string name="search_filter_message_labels">Searching on current filter (%d selected label(s)).</string>
    <string name="search_filter_message_nolabels">Searches all passwords.</string>
    <string name="search_filter_hint">Search&#8230;</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_syncronize_desktop">Syncronize with Desktop</string>
    <string name="details_labels_text">Labels:</string>
    <string name="title_generate_password">New Password</string>
    <string name="title_edit_password">Edit Password</string>
    <string name="remove_label">X</string>
    <string name="add_label_to_pwd">Add labels by&#8230;</string>
    <string name="invalid_text_input">This is not a valid value!</string>
    <string name="error_label_already_exists">This label already exists!</string>
    <string name="error_pwd_already_exists">A password with this name already exists!</string>
    <string name="no_matching_secrets">No matching passwords!</string>
    <string name="current_filter_prefix">Current filter: </string>
    <string name="current_filter_none">Current filter: no filter</string>
    <string name="keyboard_done">done</string>
    <string name="keyboard_space">space</string>
    <string name="keyboard_clear_close" tools:ignore="ButtonCase">cancel</string>
    <string name="alert_image_content_description">Alert Image</string>
    <string name="generate_password_line1">Or generate a password!</string>
    <string name="generate_new_password_use_special_characters">Include special characters\n(e.g. %*\'!#)</string>
    <string name="enter_password_below">Enter a new password below:</string>
    <string name="new_password_hint">New password</string>
    <string name="copy">Copy</string>
    <string name="use_non_english_characters">Include non-english characters\n(e.g. ÆØÅÄÖ)</string>
    <string name="number_of_characters_to_generate">Generate %d characters.</string>
    <string name="save_password_with_description">Save password with the following description:</string>
    <string name="password_desciption_hint">Password description</string>
    <string name="paste">paste</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="password_username_hint">Username</string>
    <string name="save_password_with_username">Add a username (optional):</string>
    <string name="new_password_added_toast">New password successfully added!</string>
    <string name="empty_label_list">Nothing to show here yet, you need to add some passwords and maybe add labels to them to keep things organised.</string>
    <string name="minimum_masterkey_length_msg">Minimum length: 8 characters</string>
    <string name="progress_saving">Saving changes&#8230;</string>
    <string name="sync_instructions_header">Instructions:</string>
    <string name="sync_instructions_body">Step 1: Open Kryptan on your PC and press F3 to start synchronization procedure.\nStep 2: Follow instructions on PC screen.\nStep 3: Press Scan QR code below.</string>
    <string name="sync_start_button">Scan QR code</string>
    <string name="sync_error_malformed_qr_content">Malformed QR code data</string>
    <string name="tcp_client_progress_init">Trying to connect to remote over the network &#8230;</string>
    <string name="tcp_client_progress_connected">Connection established, reading data &#8230;</string>
    <string name="tcp_client_progress_decrypting">Data received, decrypting &#8230;</string>
    <string name="tcp_client_progress_sending">Sending response to remote &#8230;</string>
    <string name="tcp_client_progress_finished">All done!</string>
    <string name="conflict_choice_missing">-MISSING-</string>
    <string name="conflict_choice_created">Created </string>
    <string name="conflict_choice_modified">Last modified </string>
    <string name="conflict_choice_no_sync">Probable cause: no prior sync</string>
    <string name="conflict_choice_new">Probable cause: new item</string>
    <string name="conflict_choice_deleted">Probable cause: deleted</string>
    <string name="conflict_choice_before_sync">Created before last sync</string>
    <string name="conflict_choice_after_sync">Created after last sync</string>
    <string name="conflict_choice_identical">Identical</string>
    <string name="sync_desktop_error_title">Error</string>
    <string name="sync_desktop_error_message">An error occurred, please try again and if it happens again please contact the author of this application.\n\n</string>
    <string name="sync_desktop_warning_title">Error</string>
    <string name="sync_desktop_warning_unresolved_items">There are unresolved sync items, please make a decision on these before pressing accept.</string>
    <string name="sync_desktop_success_title">Success</string>
    <string name="sync_desktop_success_message">Passwords successfully syncronized!</string>
    <string name="sync_desktop_cancelled">Cancelled by the user!</string>
</resources>
