<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom"
        android:title="@string/action_search"/>
    <item
        android:id="@+id/action_new_password"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom"
        android:title="@string/action_new_password"/>
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_sync"/>
    <item
        android:id="@+id/action_change_master"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_master"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>

</menu>