<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secret_detail"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".SecretDetailFragment" >

    <LinearLayout
        	android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/descriptionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_description_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <org.caelus.kryptanandroid.buildingblocks.SecureTextView
            android:id="@+id/descriptionText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/copyDescription"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_copy_to_clipboard_button" />

            <Button
                android:id="@+id/editDescription"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_edit_description_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/usernameHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/details_username_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <org.caelus.kryptanandroid.buildingblocks.SecureTextView
            android:id="@+id/usernameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/copyUsername"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_copy_to_clipboard_button" />

            <Button
                android:id="@+id/editUsername"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_edit_username_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/passwordHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/details_password_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <org.caelus.kryptanandroid.buildingblocks.SecureTextView
            android:id="@+id/passwordText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/copyPassword"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_copy_to_clipboard_button" />

            <Button
                android:id="@+id/editPassword"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_edit_password_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/EditLabelItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/details_labels_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <org.caelus.kryptanandroid.buildingblocks.SecureTextView
            android:id="@+id/labelsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/editLabels"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_edit_labels_button" />
        </LinearLayout>

        <TextView
            android:id="@+id/details_misc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/details_misc_text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/deletePassword"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_delete_password_button" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>