<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="320dp"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".GeneratePasswordDialog"
            tools:ignore="UselessParent" >

            <TextView
                android:id="@+id/newPasswordEnterPasswordText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/enter_password_below" />

            <org.caelus.kryptanandroid.buildingblocks.SecureEditText
                android:id="@+id/newPasswordTextEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPasswordEnterPasswordText"
                android:layout_marginTop="16dp"
                android:layout_toLeftOf="@+id/newPasswordCopyButton"
                android:ems="10"
                android:hint="@string/new_password_hint" />

            <Button
                android:id="@+id/newPasswordCopyButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/newPasswordTextEdit"
                android:layout_alignBottom="@+id/newPasswordTextEdit"
                android:layout_alignParentRight="true"
                android:text="@string/copy" />

            <Button
                android:id="@+id/newPasswordGenerateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPasswordTextEdit"
                android:layout_marginTop="32dp"
                android:text="@string/generate_password_line1" />

            <ToggleButton
                android:id="@+id/newPasswordSpecialCharacterToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPasswordGenerateButton"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/newPasswordSpecialCharacterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/newPasswordSpecialCharacterToggle"
                android:layout_alignTop="@+id/newPasswordSpecialCharacterToggle"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/newPasswordSpecialCharacterToggle"
                android:gravity="center"
                android:text="@string/generate_new_password_use_special_characters" />

            <ToggleButton
                android:id="@+id/newPasswordNonEnglishToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPasswordSpecialCharacterToggle"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/newPasswordNonEnglishText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/newPasswordNonEnglishToggle"
                android:layout_alignTop="@+id/newPasswordNonEnglishToggle"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/newPasswordNonEnglishToggle"
                android:gravity="center"
                android:text="@string/use_non_english_characters" />

            <TextView
                android:id="@+id/newPasswordNumberOfCharactersText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPasswordNonEnglishToggle"
                android:layout_marginTop="16dp"
                android:text="@string/number_of_characters_to_generate" />

            <SeekBar
                android:id="@+id/newPasswordNumberOfCharactersSeekbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/newPasswordNumberOfCharactersText"
                android:layout_marginTop="16dp"
                android:max="64" />

            <!-- The minimum value is set int code and the real maximum is the above number + minimum value -->

            <TextView
                android:id="@+id/newPasswordDescriptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/newPasswordNumberOfCharactersSeekbar"
                android:layout_marginTop="32dp"
                android:text="@string/save_password_with_description" />

            <org.caelus.kryptanandroid.buildingblocks.SecureEditText
                android:id="@+id/newPasswordDescriptionEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/newPasswordDescriptionText"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password_desciption_hint" />
        </RelativeLayout>
    </LinearLayout>

</ScrollView>